tests/interpreter/call-expression-arg-error.stderr
error: identifier 'y' is not defined
 --> $DIR/call-expression-arg-error.lox:2:3
  |
2 | f(y);
  |   ^
