tests/interpreter/call-expression-arg-error.lox
fn f(x) {}
f(y);
